Fixed bugs in title spacing. Also Added about page w/ no content. +Updates to the navbar

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@
   color: #848484;
 }
 .l-title{
-  padding-top: 10vh;
+  position: relative;
+  top: 20vh;
   font-family: 'Playfair Display', serif;
   font-size: 6rem;
 }
@@ -61,6 +62,8 @@
 .l-desc{
   font-family: 'Lato', sans-serif;
   font-size: 1.75rem;
+  position: relative;
+  top: 21vh;
 }
 
 .particle{
